# camera

./: LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/assimp/: build.sh
app/libs/assimp/include/assimp/: BlobIOSystem.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  camera.h  cimport.h  defs.h  importerdesc.h  material.h  matrix3x3.h  matrix4x4.h  mesh.h  postprocess.h  quaternion.h  scene.h  vector2.h  vector3.h
app/libs/assimp/include/assimp/Compiler/: pstdint.h
app/libs/libfacedetection/include/facedetection/: facedetectcnn.h
app/src/androidTest/java/com/android/facially/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fbx.frag  fbx.vert  general.vert  general_screen.vert  landmark.frag  landmark.vert  landmarkf.vert  rgba.vert  rgba_screen.vert
app/src/main/assets/pig/: pig.dae
app/src/main/cpp/: jni.cpp  jni_detect.cpp
app/src/main/java/com/android/facially/: BitmapUtil.java  CameraActivity.kt  DaeActivity.kt  DaeCore.kt  FbxActivity.kt  LandmarkActivity.kt  MainActivity.kt  OesRender.kt  RGBARender.kt  extension.kt  util.kt
app/src/main/java/com/android/facially/activity/: CameraActivity.kt  FbxActivity.kt  LandmarkActivity.kt  LandmarkFActivity.kt  Mesh.kt  PreviewActivity.kt
app/src/main/java/com/android/facially/color/: FaceActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_dae.xml  activity_face.xml  activity_fbx.xml  activity_landmark_f.xml  activity_main.xml  activity_preview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/facially/: ExampleUnitTest.kt
(+15 files in other folders)
